feat: swagger getby ganhos
