# src/docs/swagger.yaml
@@ -89,6 +89,47 @@ paths:
       summary: Cria um novo ganho
       tags:
       - Ganhos
+  /api/v1/ganhos/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Fetches a ganho record based on the provided ID parameter
+      parameters:
+      - description: ID of the ganho to retrieve
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ganho retrieved successfully
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid ID format
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Ganho not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Retrieve a ganho by ID
+      tags:
+      - Ganhos
   /api/v1/gastos:
     post:
       consumes:
